lib/LuaParser.js
"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;
var _antlr = _interopRequireDefault(require("antlr4"));
var _LuaParserListener = _interopRequireDefault(require("./LuaParserListener.js"));
var _LuaParserVisitor = _interopRequireDefault(require("./LuaParserVisitor.js"));
function _interopRequireDefault(e) { return e && e.__esModule ? e : { default: e }; }
// Generated from LuaParser.g4 by ANTLR 4.13.1
// jshint ignore: start

const atn = new _antlr.default.atn.ATNDeserializer().deserialize(serializedATN);
const decisionsToDFA = atn.decisionToState.map((ds, index) => new _antlr.default.dfa.DFA(ds, index));
const sharedContextCache = new _antlr.default.atn.PredictionContextCache();
class LuaParser extends _antlr.default.Parser {
  static grammarFileName = "LuaParser.g4";
  static literalNames = [null, "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", "'repeat'", "'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", "','", "'in'", "'function'", "'local'", "'<'", "'>'", "'return'", "'continue'", "'::'", "'nil'", "'false'", "'true'", "'.'", "'~'", "'-'", "'#'", "'('", "')'", "'not'", "'<<'", "'>>'", "'&'", "'//'", "'%'", "':'", "'<='", "'>='", "'and'", "'or'", "'+'", "'*'", "'{'", "'}'", "'['", "']'", "'=='", "'..'", "'|'", "'^'", "'/'", "'...'", "'~='"];
  static symbolicNames = [null, "SEMI", "EQ", "BREAK", "GOTO", "DO", "END", "WHILE", "REPEAT", "UNTIL", "IF", "THEN", "ELSEIF", "ELSE", "FOR", "COMMA", "IN", "FUNCTION", "LOCAL", "LT", "GT", "RETURN", "CONTINUE", "CC", "NIL", "FALSE", "TRUE", "DOT", "SQUIG", "MINUS", "POUND", "OP", "CP", "NOT", "LL", "GG", "AMP", "SS", "PER", "COL", "LE", "GE", "AND", "OR", "PLUS", "STAR", "OCU", "CCU", "OB", "CB", "EE", "DD", "PIPE", "CARET", "SLASH", "DDD", "SQEQ", "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "WS", "NL", "SHEBANG"];
  static ruleNames = ["start_", "chunk", "block", "statment", "attnamelist", "attrib", "retstatment", "label", "funcname", "varlist", "namelist", "explist", "exp", "var", "prefixexp", "functioncall", "args", "functiondef", "funcbody", "parlist", "tableconstructor", "fieldlist", "field", "fieldsep", "number", "string"];
  constructor(input) {
    super(input);
    this._interp = new _antlr.default.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = LuaParser.ruleNames;
    this.literalNames = LuaParser.literalNames;
    this.symbolicNames = LuaParser.symbolicNames;
  }
  sempred(localctx, ruleIndex, predIndex) {
    switch (ruleIndex) {
      case 12:
        return this.exp_sempred(localctx, predIndex);
      case 15:
        return this.functioncall_sempred(localctx, predIndex);
      default:
        throw "No predicate with index:" + ruleIndex;
    }
  }
  exp_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 0:
        return this.precpred(this._ctx, 9);
      case 1:
        return this.precpred(this._ctx, 7);
      case 2:
        return this.precpred(this._ctx, 6);
      case 3:
        return this.precpred(this._ctx, 5);
      case 4:
        return this.precpred(this._ctx, 4);
      case 5:
        return this.precpred(this._ctx, 3);
      case 6:
        return this.precpred(this._ctx, 2);
      case 7:
        return this.precpred(this._ctx, 1);
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  functioncall_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 8:
        return this.precpred(this._ctx, 5);
      case 9:
        return this.precpred(this._ctx, 2);
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  start_() {
    let localctx = new Start_Context(this, this._ctx, this.state);
    this.enterRule(localctx, 0, LuaParser.RULE_start_);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 52;
      this.chunk();
      this.state = 53;
      this.match(LuaParser.EOF);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  chunk() {
    let localctx = new ChunkContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, LuaParser.RULE_chunk);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 55;
      this.block();
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  block() {
    let localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, LuaParser.RULE_block);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 60;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
      while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          this.state = 57;
          this.statment();
        }
        this.state = 62;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
      }
      this.state = 64;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if ((_la & ~0x1f) === 0 && (1 << _la & 6291464) !== 0) {
        this.state = 63;
        this.retstatment();
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  statment() {
    let localctx = new StatmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, LuaParser.RULE_statment);
    var _la = 0;
    try {
      this.state = 147;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 6, this._ctx);
      switch (la_) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          this.state = 66;
          this.match(LuaParser.SEMI);
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          this.state = 67;
          this.varlist();
          this.state = 68;
          this.match(LuaParser.EQ);
          this.state = 69;
          this.explist();
          break;
        case 3:
          this.enterOuterAlt(localctx, 3);
          this.state = 71;
          this.functioncall(0);
          break;
        case 4:
          this.enterOuterAlt(localctx, 4);
          this.state = 72;
          this.label();
          break;
        case 5:
          this.enterOuterAlt(localctx, 5);
          this.state = 73;
          this.match(LuaParser.BREAK);
          break;
        case 6:
          this.enterOuterAlt(localctx, 6);
          this.state = 74;
          this.match(LuaParser.GOTO);
          this.state = 75;
          this.match(LuaParser.NAME);
          break;
        case 7:
          this.enterOuterAlt(localctx, 7);
          this.state = 76;
          this.match(LuaParser.DO);
          this.state = 77;
          this.block();
          this.state = 78;
          this.match(LuaParser.END);
          break;
        case 8:
          this.enterOuterAlt(localctx, 8);
          this.state = 80;
          this.match(LuaParser.WHILE);
          this.state = 81;
          this.exp(0);
          this.state = 82;
          this.match(LuaParser.DO);
          this.state = 83;
          this.block();
          this.state = 84;
          this.match(LuaParser.END);
          break;
        case 9:
          this.enterOuterAlt(localctx, 9);
          this.state = 86;
          this.match(LuaParser.REPEAT);
          this.state = 87;
          this.block();
          this.state = 88;
          this.match(LuaParser.UNTIL);
          this.state = 89;
          this.exp(0);
          break;
        case 10:
          this.enterOuterAlt(localctx, 10);
          this.state = 91;
          this.match(LuaParser.IF);
          this.state = 92;
          this.exp(0);
          this.state = 93;
          this.match(LuaParser.THEN);
          this.state = 94;
          this.block();
          this.state = 102;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          while (_la === 12) {
            this.state = 95;
            this.match(LuaParser.ELSEIF);
            this.state = 96;
            this.exp(0);
            this.state = 97;
            this.match(LuaParser.THEN);
            this.state = 98;
            this.block();
            this.state = 104;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
          }
          this.state = 107;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          if (_la === 13) {
            this.state = 105;
            this.match(LuaParser.ELSE);
            this.state = 106;
            this.block();
          }
          this.state = 109;
          this.match(LuaParser.END);
          break;
        case 11:
          this.enterOuterAlt(localctx, 11);
          this.state = 111;
          this.match(LuaParser.FOR);
          this.state = 112;
          this.match(LuaParser.NAME);
          this.state = 113;
          this.match(LuaParser.EQ);
          this.state = 114;
          this.exp(0);
          this.state = 115;
          this.match(LuaParser.COMMA);
          this.state = 116;
          this.exp(0);
          this.state = 119;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          if (_la === 15) {
            this.state = 117;
            this.match(LuaParser.COMMA);
            this.state = 118;
            this.exp(0);
          }
          this.state = 121;
          this.match(LuaParser.DO);
          this.state = 122;
          this.block();
          this.state = 123;
          this.match(LuaParser.END);
          break;
        case 12:
          this.enterOuterAlt(localctx, 12);
          this.state = 125;
          this.match(LuaParser.FOR);
          this.state = 126;
          this.namelist();
          this.state = 127;
          this.match(LuaParser.IN);
          this.state = 128;
          this.explist();
          this.state = 129;
          this.match(LuaParser.DO);
          this.state = 130;
          this.block();
          this.state = 131;
          this.match(LuaParser.END);
          break;
        case 13:
          this.enterOuterAlt(localctx, 13);
          this.state = 133;
          this.match(LuaParser.FUNCTION);
          this.state = 134;
          this.funcname();
          this.state = 135;
          this.funcbody();
          break;
        case 14:
          this.enterOuterAlt(localctx, 14);
          this.state = 137;
          this.match(LuaParser.LOCAL);
          this.state = 138;
          this.match(LuaParser.FUNCTION);
          this.state = 139;
          this.match(LuaParser.NAME);
          this.state = 140;
          this.funcbody();
          break;
        case 15:
          this.enterOuterAlt(localctx, 15);
          this.state = 141;
          this.match(LuaParser.LOCAL);
          this.state = 142;
          this.attnamelist();
          this.state = 145;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          if (_la === 2) {
            this.state = 143;
            this.match(LuaParser.EQ);
            this.state = 144;
            this.explist();
          }
          break;
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  attnamelist() {
    let localctx = new AttnamelistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, LuaParser.RULE_attnamelist);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 149;
      this.match(LuaParser.NAME);
      this.state = 150;
      this.attrib();
      this.state = 156;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 15) {
        this.state = 151;
        this.match(LuaParser.COMMA);
        this.state = 152;
        this.match(LuaParser.NAME);
        this.state = 153;
        this.attrib();
        this.state = 158;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  attrib() {
    let localctx = new AttribContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, LuaParser.RULE_attrib);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 162;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 19) {
        this.state = 159;
        this.match(LuaParser.LT);
        this.state = 160;
        this.match(LuaParser.NAME);
        this.state = 161;
        this.match(LuaParser.GT);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  retstatment() {
    let localctx = new RetstatmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, LuaParser.RULE_retstatment);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 170;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 21:
          this.state = 164;
          this.match(LuaParser.RETURN);
          this.state = 166;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          if ((_la & ~0x1f) === 0 && (1 << _la & 4144103424) !== 0 || (_la - 33 & ~0x1f) === 0 && (1 << _la - 33 & 4282392577) !== 0) {
            this.state = 165;
            this.explist();
          }
          break;
        case 3:
          this.state = 168;
          this.match(LuaParser.BREAK);
          break;
        case 22:
          this.state = 169;
          this.match(LuaParser.CONTINUE);
          break;
        default:
          throw new _antlr.default.error.NoViableAltException(this);
      }
      this.state = 173;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 1) {
        this.state = 172;
        this.match(LuaParser.SEMI);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  label() {
    let localctx = new LabelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, LuaParser.RULE_label);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 175;
      this.match(LuaParser.CC);
      this.state = 176;
      this.match(LuaParser.NAME);
      this.state = 177;
      this.match(LuaParser.CC);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  funcname() {
    let localctx = new FuncnameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, LuaParser.RULE_funcname);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 179;
      this.match(LuaParser.NAME);
      this.state = 184;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 27) {
        this.state = 180;
        this.match(LuaParser.DOT);
        this.state = 181;
        this.match(LuaParser.NAME);
        this.state = 186;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 189;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 39) {
        this.state = 187;
        this.match(LuaParser.COL);
        this.state = 188;
        this.match(LuaParser.NAME);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  varlist() {
    let localctx = new VarlistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, LuaParser.RULE_varlist);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 191;
      this.var_();
      this.state = 196;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 15) {
        this.state = 192;
        this.match(LuaParser.COMMA);
        this.state = 193;
        this.var_();
        this.state = 198;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  namelist() {
    let localctx = new NamelistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, LuaParser.RULE_namelist);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 199;
      this.match(LuaParser.NAME);
      this.state = 204;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 15, this._ctx);
      while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          this.state = 200;
          this.match(LuaParser.COMMA);
          this.state = 201;
          this.match(LuaParser.NAME);
        }
        this.state = 206;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 15, this._ctx);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  explist() {
    let localctx = new ExplistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, LuaParser.RULE_explist);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 207;
      this.exp(0);
      this.state = 212;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 15) {
        this.state = 208;
        this.match(LuaParser.COMMA);
        this.state = 209;
        this.exp(0);
        this.state = 214;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  exp(_p) {
    if (_p === undefined) {
      _p = 0;
    }
    const _parentctx = this._ctx;
    const _parentState = this.state;
    let localctx = new ExpContext(this, this._ctx, _parentState);
    let _prevctx = localctx;
    const _startState = 24;
    this.enterRecursionRule(localctx, 24, LuaParser.RULE_exp, _p);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 227;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 24:
          this.state = 216;
          this.match(LuaParser.NIL);
          break;
        case 25:
          this.state = 217;
          this.match(LuaParser.FALSE);
          break;
        case 26:
          this.state = 218;
          this.match(LuaParser.TRUE);
          break;
        case 61:
        case 62:
        case 63:
        case 64:
          this.state = 219;
          this.number();
          break;
        case 58:
        case 59:
        case 60:
          this.state = 220;
          this.string();
          break;
        case 55:
          this.state = 221;
          this.match(LuaParser.DDD);
          break;
        case 17:
          this.state = 222;
          this.functiondef();
          break;
        case 31:
        case 57:
          this.state = 223;
          this.prefixexp();
          break;
        case 46:
          this.state = 224;
          this.tableconstructor();
          break;
        case 28:
        case 29:
        case 30:
        case 33:
          this.state = 225;
          _la = this._input.LA(1);
          if (!((_la - 28 & ~0x1f) === 0 && (1 << _la - 28 & 39) !== 0)) {
            this._errHandler.recoverInline(this);
          } else {
            this._errHandler.reportMatch(this);
            this.consume();
          }
          this.state = 226;
          this.exp(8);
          break;
        default:
          throw new _antlr.default.error.NoViableAltException(this);
      }
      this._ctx.stop = this._input.LT(-1);
      this.state = 255;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 19, this._ctx);
      while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          if (this._parseListeners !== null) {
            this.triggerExitRuleEvent();
          }
          _prevctx = localctx;
          this.state = 253;
          this._errHandler.sync(this);
          var la_ = this._interp.adaptivePredict(this._input, 18, this._ctx);
          switch (la_) {
            case 1:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 229;
              if (!this.precpred(this._ctx, 9)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
              }
              this.state = 230;
              this.match(LuaParser.CARET);
              this.state = 231;
              this.exp(9);
              break;
            case 2:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 232;
              if (!this.precpred(this._ctx, 7)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
              }
              this.state = 233;
              _la = this._input.LA(1);
              if (!((_la - 37 & ~0x1f) === 0 && (1 << _la - 37 & 131331) !== 0)) {
                this._errHandler.recoverInline(this);
              } else {
                this._errHandler.reportMatch(this);
                this.consume();
              }
              this.state = 234;
              this.exp(8);
              break;
            case 3:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 235;
              if (!this.precpred(this._ctx, 6)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
              }
              this.state = 236;
              _la = this._input.LA(1);
              if (!(_la === 29 || _la === 44)) {
                this._errHandler.recoverInline(this);
              } else {
                this._errHandler.reportMatch(this);
                this.consume();
              }
              this.state = 237;
              this.exp(7);
              break;
            case 4:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 238;
              if (!this.precpred(this._ctx, 5)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
              }
              this.state = 239;
              this.match(LuaParser.DD);
              this.state = 240;
              this.exp(5);
              break;
            case 5:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 241;
              if (!this.precpred(this._ctx, 4)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
              }
              this.state = 242;
              _la = this._input.LA(1);
              if (!(_la === 19 || _la === 20 || (_la - 40 & ~0x1f) === 0 && (1 << _la - 40 & 66563) !== 0)) {
                this._errHandler.recoverInline(this);
              } else {
                this._errHandler.reportMatch(this);
                this.consume();
              }
              this.state = 243;
              this.exp(5);
              break;
            case 6:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 244;
              if (!this.precpred(this._ctx, 3)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
              }
              this.state = 245;
              this.match(LuaParser.AND);
              this.state = 246;
              this.exp(4);
              break;
            case 7:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 247;
              if (!this.precpred(this._ctx, 2)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
              }
              this.state = 248;
              this.match(LuaParser.OR);
              this.state = 249;
              this.exp(3);
              break;
            case 8:
              localctx = new ExpContext(this, _parentctx, _parentState);
              this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
              this.state = 250;
              if (!this.precpred(this._ctx, 1)) {
                throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
              }
              this.state = 251;
              _la = this._input.LA(1);
              if (!((_la - 28 & ~0x1f) === 0 && (1 << _la - 28 & 16777665) !== 0)) {
                this._errHandler.recoverInline(this);
              } else {
                this._errHandler.reportMatch(this);
                this.consume();
              }
              this.state = 252;
              this.exp(2);
              break;
          }
        }
        this.state = 257;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 19, this._ctx);
      }
    } catch (error) {
      if (error instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = error;
        this._errHandler.reportError(this, error);
        this._errHandler.recover(this, error);
      } else {
        throw error;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return localctx;
  }
  var_() {
    let localctx = new VarContext(this, this._ctx, this.state);
    this.enterRule(localctx, 26, LuaParser.RULE_var);
    try {
      this.state = 268;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 21, this._ctx);
      switch (la_) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          this.state = 258;
          this.match(LuaParser.NAME);
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          this.state = 259;
          this.prefixexp();
          this.state = 266;
          this._errHandler.sync(this);
          switch (this._input.LA(1)) {
            case 48:
              this.state = 260;
              this.match(LuaParser.OB);
              this.state = 261;
              this.exp(0);
              this.state = 262;
              this.match(LuaParser.CB);
              break;
            case 27:
              this.state = 264;
              this.match(LuaParser.DOT);
              this.state = 265;
              this.match(LuaParser.NAME);
              break;
            default:
              throw new _antlr.default.error.NoViableAltException(this);
          }
          break;
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  prefixexp() {
    let localctx = new PrefixexpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 28, LuaParser.RULE_prefixexp);
    try {
      this.state = 308;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 28, this._ctx);
      switch (la_) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          this.state = 270;
          this.match(LuaParser.NAME);
          this.state = 279;
          this._errHandler.sync(this);
          var _alt = this._interp.adaptivePredict(this._input, 23, this._ctx);
          while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER) {
            if (_alt === 1) {
              this.state = 277;
              this._errHandler.sync(this);
              switch (this._input.LA(1)) {
                case 48:
                  this.state = 271;
                  this.match(LuaParser.OB);
                  this.state = 272;
                  this.exp(0);
                  this.state = 273;
                  this.match(LuaParser.CB);
                  break;
                case 27:
                  this.state = 275;
                  this.match(LuaParser.DOT);
                  this.state = 276;
                  this.match(LuaParser.NAME);
                  break;
                default:
                  throw new _antlr.default.error.NoViableAltException(this);
              }
            }
            this.state = 281;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input, 23, this._ctx);
          }
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          this.state = 282;
          this.functioncall(0);
          this.state = 291;
          this._errHandler.sync(this);
          var _alt = this._interp.adaptivePredict(this._input, 25, this._ctx);
          while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER) {
            if (_alt === 1) {
              this.state = 289;
              this._errHandler.sync(this);
              switch (this._input.LA(1)) {
                case 48:
                  this.state = 283;
                  this.match(LuaParser.OB);
                  this.state = 284;
                  this.exp(0);
                  this.state = 285;
                  this.match(LuaParser.CB);
                  break;
                case 27:
                  this.state = 287;
                  this.match(LuaParser.DOT);
                  this.state = 288;
                  this.match(LuaParser.NAME);
                  break;
                default:
                  throw new _antlr.default.error.NoViableAltException(this);
              }
            }
            this.state = 293;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input, 25, this._ctx);
          }
          break;
        case 3:
